# huspacy-eval-resources

./: .gitignore  README.md  pyproject.toml
data/processed/szeged-corpus/: README.md
data/processed/szeged-ner/: README.md  test.txt  valid.txt
data/processed/szeged-web/: README.md
scripts/XLM-RoBERTa_size_reduction/: XLM-RoBERTa_size_reduction.ipynb
