[tool.poetry]
name = "huspacy-eval-resources"
version = "0.1.0"
description = "HuSpaCy Evaluation and Debugging Resources"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
seaborn = "^0.11.2"
seqeval = "^1.2.2"
huspacy = "^0.4.2"
ipymarkup = "^0.9.0"
conll = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
