[tool.poetry]
name = "huspacy-eval-resources"
version = "0.1.0"
description = "HuSpaCy Evaluation and Debugging Resources"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
spacy = "^3.2.3"
lemmy3 = "^3.2.0a"
spacy-ray = "^0.1.0"
wandb = "^0.10.23"
spacy-huggingface-hub = "^0.0.6"
conllu = "^4.4"
pandas = "^1.3.1"
wheel = "^0.37.0"
scikit-learn = "^0.24.2"
spacy_conll = "^3.0"
contexttimer = "^0.3.3"
bump2version = "^1.0.1"
seqeval = "^1.2.2"
seaborn = "^0.11.2"
ipymarkup = "^0.9.0"
spacy-transformers = "^1.1.4"
numpy = "^1.22.2" #TODO: issue in spacy/explosion
spacy-experimental = "0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
